# Rust

./: Cargo.toml  api_util.py  app.py  app_new.py  dash_home.py  documentsummarizer.py  main.rs
Final/: app.py  documentsummarizer.py
Maulik/: HowToRun.txt  app.sh  app_monitor.py  dash_home.py  documentsummarizer.py  file_save.sh  publish_app.py  requirements.txt  response.txt  samplebackend.txt  upload_functions.py
Maulik/assets/: custom.css
src/: .env  lib.rs  main copy.rs  main.rs  mempool.js  storage.rs
src/crawler/: cosmos_crawler.rs  cosmos_evm_crawler.rs  eth_crawler.rs  lib.rs  storage.rs
