[package]
name = "javascript_in_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.9.0"
web3 = "0.18.0"
tokio = "1.20.1"
chrono = "0.4.22"
